# libvoyaplayer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
android/: .gitignore  build.gradle  local.properties  settings.gradle
android/testvoyaplayer/: build.gradle
android/testvoyaplayer/src/main/: AndroidManifest.xml
android/testvoyaplayer/src/main/res/values/: strings.xml
img/: icon.ppm
inc/: libvoyaplayer.h  libvoyaplayer_events.h
include/: libvoyaplayer.h  libvoyaplayer_events.h
ios/: LaunchScreen.storyboard  MacOSXBundleInfo.plist.in
src/: LVP_AudioContext.cpp  LVP_AudioContext.h  LVP_AudioSpecs.cpp  LVP_AudioSpecs.h  LVP_Color.cpp  LVP_Color.h  LVP_FS_Extensions.h  LVP_FileSystem.cpp  LVP_FileSystem.h  LVP_Global.h  LVP_Graphics.cpp  LVP_Graphics.h  LVP_Media.cpp  LVP_Media.h  LVP_Player.cpp  LVP_Player.h  LVP_PlayerState.cpp  LVP_PlayerState.h  LVP_SubRect.cpp  LVP_SubRect.h  LVP_SubStyle.cpp  LVP_SubStyle.h  LVP_SubTextRenderer.cpp  LVP_SubTextRenderer.h  LVP_SubTexture.cpp  LVP_SubTexture.h  LVP_Subtitle.cpp  LVP_Subtitle.h  LVP_SubtitleBitmap.cpp  LVP_SubtitleBitmap.h  LVP_SubtitleContext.cpp  LVP_SubtitleContext.h  LVP_SubtitleText.cpp  LVP_SubtitleText.h  LVP_Text.cpp  LVP_Text.h  LVP_Texture.cpp  LVP_Texture.h  LVP_TimeOut.cpp  LVP_TimeOut.h  (+4 more)
test/: TestButton.cpp  TestButton.h  TestPlayer.cpp  TestPlayer.h  TestText.cpp  TestText.h  TestWindow.cpp  TestWindow.h  main.cpp  main.h
windows/: libvoyaplayer.rc
